<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_home"
    tools:context=".Welcome">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textColor="@color/colorPrimary"
            android:gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"

            android:gravity="center_horizontal"
            android:text="@string/welcomePhrase"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="280dp"
            android:layout_marginTop="150dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

    </LinearLayout>


</RelativeLayout>