<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".BookDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/bookCbackground"
            android:background="#eeeeee"
            android:contentDescription="@string/background_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="130dp"
                android:layout_height="187dp"
                android:id="@+id/bookC"
                android:layout_marginHorizontal="30dp"
                android:layout_marginVertical="46dp"
                android:background="@android:color/darker_gray"/>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="237dp"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="BOOK TITLE"
                            android:id="@+id/dTitle"
                            android:textSize="24sp"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowColor="@android:color/darker_gray"
                            android:layout_marginTop="60dp"
                            android:shadowRadius="6"
                            android:layout_marginHorizontal="15dp"
                            android:textStyle="bold"
                            android:textColor="@color/white"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/dAuthor"
                            android:shadowRadius="6"
                            android:shadowDx="0"
                            android:shadowDy="0"
                            android:shadowColor="@android:color/darker_gray"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:layout_margin="30dp"
                            android:text="Book Author"/>
                    </LinearLayout>

                    <ToggleButton
                        android:layout_width="wrap_content"
                        android:id="@+id/toggleBtn"
                        android:textAllCaps="false"
                        android:textOff="@string/request"
                        android:layout_marginVertical="6dp"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </RelativeLayout>
            

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uploadedBy"
        android:layout_marginHorizontal="20dp"
        android:text="Uploaded By: "/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text=" Books available"
        android:id="@+id/availableBooks"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="ISBN"
        android:id="@+id/isbnBook"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="Category"
        android:id="@+id/bookCategory"/>

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:paddingVertical="20dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Details Goes Here"
            android:textSize="20sp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/details"/>
    </ScrollView>
</LinearLayout>